# GameOfLife

./: CMakeLists.txt  vcpkg.json
bench/: compute.cpp
include/: constant.h  conway.h
src/: conway.cpp  gpu_main.cpp  main.cpp
